# CTetDx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/font/: font.csv  font.ctf
resources/shaders/: BlockPixel.hlsl  BlockVertex.hlsl  BlockVertexOld.hlsl  FrameVertex.hlsl  IngameTextPixel.hlsl  IngameTextVertex.hlsl  TestPixel.hlsl  TestVertex.hlsl
src/: die.cpp  die.hpp  linux_die.cpp  linux_main.cpp  main.cpp  win32_main.cpp
src/audio/: sound-bank.cpp  sound-bank.hpp  sound-pool.cpp  sound-pool.hpp  wav.cpp  wav.hpp
src/audio/wasapi/: wasapi_audio_system.cpp  wasapi_audio_system.hpp
src/audio/win32/: win32_audio.cpp  win32_audio.hpp  win32_sound-bank.cpp  win32_sound-bank.hpp
src/control/: control.cpp  control.hpp
src/d3d/: block-batch.cpp  block-batch.hpp  check-result.cpp  check-result.hpp  d3d-game.cpp  d3d-game.hpp  d3d-render.cpp  d3d-render.hpp  frame-mesh.cpp  frame-mesh.hpp  game-rendering-context.cpp  game-rendering-context.hpp  math-util.hpp  mesh.cpp  mesh.hpp  shader-pair.cpp  shader-pair.hpp
src/math/: math.hpp  rect.hpp  simple-math.hpp  two-numbers.hpp  vector2-cross-ctet.hpp  vector2.hpp
src/render/: block-batch.cpp  block-batch.hpp  bmp.cpp  bmp.hpp  d3d11_gfx.cpp  d3d11_gfx.hpp  gfx.hpp  ingame-text.cpp  ingame-text.hpp  text.cpp  text.hpp
src/render/d3d11/: d3d11_block-mesh.cpp  d3d11_block-mesh.hpp  d3d11_engine-rendering-context.cpp  d3d11_engine-rendering-context.hpp  d3d11_frame-mesh.cpp  d3d11_frame-mesh.hpp  d3d11_mesh.cpp  d3d11_mesh.hpp  d3d11_renderer.cpp  d3d11_renderer.hpp  d3d11_shader-pair.cpp  d3d11_shader-pair.hpp  d3d11_texture.cpp  d3d11_texture.hpp
src/util/: fps-counter.cpp  fps-counter.hpp
src/win32/: win32_check-result.cpp  win32_check-result.hpp  win32_complete-file-path.cpp  win32_complete-file-path.hpp  win32_files.cpp  win32_files.hpp  win32_kill-program.cpp  win32_kill-program.hpp  win32_memory.cpp  win32_memory.hpp  win32_window.cpp  win32_window.hpp
src/window/: window.cpp  window.hpp
